c/examples/writing-a-c-compiler-tests/tests/chapter_2/valid/negate_int_max.c
int main(void) {
    // 2147483647 is the largest possible value of type int
    return -2147483647;
}