c/examples/writing-a-c-compiler-tests/tests/chapter_2/invalid_parse/wrong_order.c
int main(void) {
    return 4-;
}